# TakeAwayPlatform

./: CMakeLists.txt  README.md
config/: config.json
include/: common.h  task_queue.h  thread_pool.h
sql/: create_tables.sql
src/: main.cpp  mist.sql
src/database/: db_handler.cpp  db_handler.h
src/http/: rest_server.cpp  rest_server.h
src/order/: order.cpp  order.h
src/shopping/: shopping.cpp  shopping.h
src/threading/: task_queue.cpp  thread_pool.cpp
src/transaction/: transaction.cpp  transaction.h
src/user/: user.cpp  user.h
src/utils/: json_utils.cpp
